2008-02-20  Halton Huo <halton.huo@sun.com>

	* configure.ac: fix g_thread_init symbol lost, closes #517603

2008-02-11  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 0.4.92

==================== 0.4.91 ====================

2008-02-11  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Depends on gtk-vnc 0.3.3

2008-02-10  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c,
	* src/vinagre-main.c,
	* src/vinagre-connection.[ch]: More work on vnc:// protocol, also
	fixes issues in recent connections stuff.

2008-01-31  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.glade: Allow port numbers less than 1024. (Closes #513381)

2008-01-30  Jonh Wendell <jwendell@gnome.org>

	* Register vinagre in gconf as a handler to vnc:// protocol

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 0.4.91

==================== 0.4.90 ====================

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* configure.ac, NEWS, README: Version 0.4.90

2008-01-28  Jonh Wendell <jwendell@gnome.org>

	* Makefile.am,
	* help/C/vinagre.xml: Fix some docs issues

2008-01-27  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-window.c,
	* src/vinagre-window-private.h: Fix a crash in delete_event,
	by disconnecting from the clipboard signal.

2008-01-25  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-notebook.c: Adjust the size of tabs.

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.desktop.in.in: Removed 'OnlyShowIn' line (LP: #185707)

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* configure.ac,
	* src/vinagre-main.c,
	* src/vinagre-connection.c
	* src/vinagre-commands.c: Use gio instead of gnome-vfs.

2008-01-20  Jonh Wendell <jwendell@gnome.org>

	* src/vnagre-tab.c (open_vnc): Don't use new symbol from gtk-vnc trunk.
	Closes #509993.

2008-01-15  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.1,
	* data/Makefile.am: Added a manual page, thanks to Emilio Pozuelo Monfort.
	Closes #509490.
