@@ -1,3 +1,9 @@
+2008-02-22  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-window.c,
+	* src/vinagre-tab.c: Fix an inconsistency in menu sensitivity, when we
+	close a tab.
+
 2008-02-20  Halton Huo <halton.huo@sun.com>
 
 	* configure.ac: fix g_thread_init symbol lost, closes #517603
